--- a/index.html
+++ b/index.html
@@ -12,12 +12,22 @@
         <h1>Rock, Paper, Scissors</h1>
     </header>
 
-    <section>
-
+    <section class="game">
+        <div id="player-choice">
+            <button aria-label="Rock" class="action" data-type="0">Rock</button>
+            <button aria-label="Paper" class="action" data-type="1">Paper</button>
+            <button aria-label="Scissors" class="action" data-type="2">Scissors</button>
+        </div>
+        <div id="results">
+            <p id="player-choice-display"></p>
+            <p id="computer-choice-display"></p>
+            <p id="winner-display"></p>
+        </div>
     </section>
 
     <footer>
-        
+        <h2>Rules</h2>
+        <p>Rock beats Scissors, Scissors beats Paper and Paper beats Rock</p>
     </footer>
 </body>
 </html>
