Add some styling to website

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+
     <title>Rock, Paper, Scissors</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
         <h1>Rock, Paper, Scissors</h1>
     </header>
 
-    <section class="game">
+    <section>
         <div id="player-choice">
             <button aria-label="Rock" class="action" data-type="0">Rock</button>
             <button aria-label="Paper" class="action" data-type="1">Paper</button>
@@ -27,7 +28,9 @@
 
     <footer>
         <h2>Rules</h2>
-        <p>Rock beats Scissors, Scissors beats Paper and Paper beats Rock</p>
+        <p class="rules">Rock beats Scissors, Scissors beats Paper and Paper beats Rock</p>
     </footer>
+
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
