Add some styling and html to results

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <button aria-label="Scissors" class="action" data-type="2">Scissors</button>
         </div>
         <div id="results">
-            <p id="player-choice-display"></p>
-            <p id="computer-choice-display"></p>
-            <p id="winner-display"></p>
+            <span class="selected">Paper (placeholder)</span>
+            <span class="selected">Rock (placeholder)</span>
+            <p id="winner-display">The winner is Player / Computer</p>
         </div>
     </section>
 
