--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
             <button aria-label="Paper" class="action" data-type="1">Paper</button>
             <button aria-label="Scissors" class="action" data-type="2">Scissors</button>
         </div>
+        <div>
+            <h3>Player score: <span>0</span></h3>
+            <h3>Computer score: <span>0</span></h3>
+        </div>
         <div id="results">
-            <span class="selected">Paper (placeholder)</span>
-            <span class="selected">Rock (placeholder)</span>
+            <span class="selected">Player choise</span>
+            <span class="selected">Computer choise</span>
             <p id="winner-display">The winner is Player / Computer</p>
+            <p></p>
         </div>
     </section>
 
