--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             <button aria-label="Scissors" class="action" data-type="2">Scissors</button>
         </div>
         <div>
-            <h3>Player score: <span>0</span></h3>
-            <h3>Computer score: <span>0</span></h3>
+            <h3>Player score: <span id="score-green">0</span></h3>
+            <h3>Computer score: <span id="score-red">0</span></h3>
         </div>
         <div id="results">
-            <span class="selected">Player choise</span>
-            <span class="selected">Computer choise</span>
-            <p id="winner-display">The winner is Player / Computer</p>
+            <span id="player-selected">Player chose: </span>
+            <span id="computer-selected">Computer chose: </span>
+            <h3 id="winner-display">The winner is: </h3>
             <p></p>
         </div>
     </section>
