--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <button aria-label="Paper" class="action" data-type="1">Paper</button>
             <button aria-label="Scissors" class="action" data-type="2">Scissors</button>
         </div>
-        <div id="results">
+        <div id="chosen">
             <span id="player-selected">Player chose: </span>
             <span id="computer-selected">Computer chose: </span>
             <h3 id="winner-display">The winner is: </h3>
