Add classes to buttons

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     <section>
         <div id="player-choice">
-            <button aria-label="Rock" class="action" data-type="0">Rock</button>
-            <button aria-label="Paper" class="action" data-type="1">Paper</button>
-            <button aria-label="Scissors" class="action" data-type="2">Scissors</button>
+            <button aria-label="Rock" class="action rock-button" data-type="0">Rock</button>
+            <button aria-label="Paper" class="action paper-button" data-type="1">Paper</button>
+            <button aria-label="Scissors" class="action scissors-button" data-type="2">Scissors</button>
         </div>
         <div id="chosen">
             <span id="player-selected">Player chose: </span>
