--- a/index.html
+++ b/index.html
@@ -39,10 +39,14 @@
     <!-- Rules for the game -->
     <div class="rules">
         <h2>Rules</h2>
-        <p>Rock beats Scissors, Scissors beats Paper and Paper beats Rock</p>
     </div>
 
-    <img>
+    <!-- Link to image: https://commons.wikimedia.org/wiki/File:Rock-paper-scissors.svg -->
+    <img src="./assets/images/rock-paper-scissors.png" alt="Chart showing the rules of rock, paper, Scissors">
+
+    <footer>
+        <h3>Visit our <a href="https://www.facebook.com/" target="_blank">Facebook </a>page!</h3>
+    </footer>
 
     <script src="assets/js/script.js"></script>
 </body>
