--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
 
     <title>Rock, Paper, Scissors</title>
 </head>
+
 <body>
     <header>
         <h1>Rock, Paper, Scissors</h1>
@@ -35,7 +37,7 @@
             <h3>Computer score: <span id="score-red">0</span></h3>
         </div>
     </section>
-    
+
     <!-- Rules for the game -->
     <div class="rules">
         <h2>Rules</h2>
@@ -45,9 +47,12 @@
     <img src="./assets/images/rock-paper-scissors.png" alt="Chart showing the rules of rock, paper, Scissors">
 
     <footer>
-        <h3>Visit our <a href="https://www.facebook.com/" target="_blank">Facebook </a>page!</h3>
+        <h3>Visit our <a href="https://www.facebook.com/"
+                aria-label="A link that takes you to our facebook page (opens in a new tab)" target="_blank">Facebook
+            </a>page!</h3>
     </footer>
 
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
