--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
             <button aria-label="Scissors" class="action scissors-button" data-type="2">Scissors</button>
         </div>
 
-        <!-- Shows what the player and computer and who the winner is -->
+        <!-- Shows what the player and computer chose and who the winner is -->
         <div id="chosen">
             <span id="player-selected">Player chose: </span>
             <span id="computer-selected">Computer chose: </span>
             <h3 id="winner-display">The winner is: </h3>
-            <p></p>
         </div>
 
         <!-- Shows how many points the player and computer has -->
@@ -36,6 +35,12 @@
             <h3>Player score: <span id="score-green">0</span></h3>
             <h3>Computer score: <span id="score-red">0</span></h3>
         </div>
+
+        <!-- Restart button -->
+        <div class="restart-container">
+            <button id="restart-button">Reset</button>
+        </div>
+
     </section>
 
     <!-- Rules for the game -->
