Add restart button in javascript

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <!-- Restart button -->
         <div class="restart-container">
-            <button id="restart-button">Reset</button>
+            <button id="restart-button">Restart</button>
         </div>
 
     </section>
