Continue with readme

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <!-- Link to image: https://commons.wikimedia.org/wiki/File:Rock-paper-scissors.svg -->
-    <img src="./assets/images/rock-paper-scissors.png" alt="Chart showing the rules of rock, paper, Scissors">
+    <img src="./assets/images/rock-paper-scissors.png" alt="A picture showing that rock beats scissors, scissors beats paper and paper beats rock">
 
     <footer>
         <h3>Visit our <a href="https://www.facebook.com/"
